implemented saved state for city

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col-3 border border-dark rounded py-3">
           <section>
-              <h5><span id="userCity"></span>'s current temperature: <span id="cityCurrentTemperature">20</span></h5>
+              <h5><span id="userCity"><%= @city %></span>'s current temperature: <span id="cityCurrentTemperature">20</span></h5>
               <form class="" id="selectCity">
                 <input class="form-control-sm" id="currentCity" type="text" placeholder="Enter a city" />
                 <input type="submit" class="btn btn-dark btn-sm"/>
