--- a/views/index.erb
+++ b/views/index.erb
@@ -44,6 +44,34 @@
       </div>
     </div>
 
+    <!-- <div class="container" >
+      <div class="row" style="height: 100px;">
+        <div class="col p-3">
+          <div id="carouselExampleControls" class="carousel slide carousel-fade" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="https://i.imgur.com/CrrN0ZT.png" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://i.imgur.com/qLCt1hZ.png" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="https://i.imgur.com/Qr2wI.png" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div> -->
+
     <nav class="navbar fixed-bottom navbar-dark bg-dark">
       <div class="navbar-brand">
         <h6>Aimee Craig</h6>
