--- a/views/index.erb
+++ b/views/index.erb
@@ -74,7 +74,7 @@
 
     <nav class="navbar fixed-bottom navbar-dark bg-dark">
       <div class="navbar-brand">
-        <h6>Aimee Craig</h6>
+        <h6>Aimee Craig & Terry Mace</h6>
       </div>
     </nav>
 
